actually run coverage/coveralls. it seems that it doesn't care whether tests fail (???) so running pytest beforehand.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ python:
 install:
   - pip install .
 before_script:
-  - pip install pep8
+  - pip install pep8 coveralls
 script:
   - pep8 factorgraph/ tests/
   - py.test
+  - coverage run --source=factorgraph tests/*
+after_success:
+  - coveralls
